[package]
name = "analysis-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bitbuffer = "0.11.0"
getopts = "0.2.21"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.125"
steamid-ng = "1.0.0"
tf-demo-parser = { git = "https://github.com/demostf/parser.git", version = "0.5.1" }
